--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark ">
+<nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark fixedfooter">
     <div class="container-fluid">
       <div class="row" style="width: 100%">
         <div class="col-8">
